[package]
name = "plotterart"
version = "0.1.0"
authors = ["Erin Zoe Moon <erin@hecke.rs>"]
edition = "2018"

[dependencies]
serialport = "3.3.0"
hpgl = { path = './lib/hpgl' }
delaunator = "0.2.0"
rand = "0.7.2"
ndarray = "0.13.0"
gnuplot = "0.0.32"
claxon = "0.4.2"
itertools = "0.8.2"
fourier = "0.1.0"

[workspace]
members = ['lib/hpgl/', 'lib/lsystem/']
